--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
 	</head>
 	<body class="w3-container w3-flat-green-sea">
-		
+		<div class="w3-left-align"><h1>Styling Test</h1></div>
 	</body>
 </html>
