--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
 	</head>
 	<body class="w3-container w3-flat-green-sea">
-		<div class="w3-left-align"><h1>Styling Test</h1></div>
+		<div class="w3-left-align">
+			<h1>Styling Test</h1>
+		</div>
+		<div>
+			<div class="w3-blue" style="width:100%"></div>
+		</div>
 	</body>
 </html>
