--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
         	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
 	</head>
@@ -8,8 +9,10 @@
 		<div class="w3-left-align">
 			<h1>Styling Test</h1>
 		</div>
-		<div>
+		<br>
+		<div class="w3-blue">
 			<div class="w3-blue" style="width:100%"></div>
 		</div>
+		<br>
 	</body>
 </html>
