--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 			<h1>Styling Test</h1>
 		</div>
 		<br>
-		<div class="w3-blue">
-			<div class="w3-blue" style="width:100%"></div>
+		<div class="w3-blue w3-center">
+			<div class="w3-blue" style="height:24px;width:1000%;"></div>
 		</div>
 		<br>
 	</body>
