--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 		<div class="w3-left-align">
 			<h1>Styling Test</h1>
 		</div>
-		<br>
-		<div class="w3-blue" align="center">
-			<div class="w3-blue" align="center" style="height:24px;width:1000%;"></div>
+		<div class="w3-bar-block w3-black">
+			<div class="w3-bar-item'></div>
 		</div>
-		<br>
 	</body>
 </html>
