--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<h1>Styling Test</h1>
 		</div>
 		<div class="w3-bar-block w3-black">
-			<div class="w3-bar-item'></div>
+			<div class="w3-bar-item"></div>
 		</div>
 	</body>
 </html>
