--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
 	</head>
-	<body class="w3-container w3-flat-green-sea">
-		<div class="w3-left-align">
+	<body class="w3-flat-green-sea">
+		<div class="w3-container w3-left-align">
 			<h1>Styling Test</h1>
 		</div>
-		<div class="w3-bar-block w3-black">
+		<div class="w3-bar-block w3-black" style="height:12px;">
 			<div class="w3-bar-item"></div>
 		</div>
 	</body>
