--- a/index.html
+++ b/index.html
@@ -2,15 +2,42 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-        	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
 	</head>
 	<body class="w3-flat-green-sea">
-		<div class="w3-container w3-left-align">
-			<h1>Styling Test</h1>
+		<div id="header">
+			<div class="w3-container w3-left-align">
+				<h1>Styling Test</h1>
+			</div>
+			<div class="w3-bar-block w3-black" style="height:12px;">
+				<div class="w3-bar-item"></div>
+			</div>
 		</div>
-		<div class="w3-bar-block w3-black" style="height:12px;">
-			<div class="w3-bar-item"></div>
+		<br>
+		<div id="main" class="w3-container w3-flat-peter-river">
+			<br>
+			<div class="w3-card-4 w3-flat-midnight-blue">
+				<header class="w3-container w3-flat-amethyst">
+					<p>This is a card</p>
+				</header>
+				<div class="w3-container">
+					<p>A card is a container for any HTML content</p>
+				</div>
+			</div>
+			<br>
+			<div class="w3-display-container w3-green" style="height:300px;">
+				<div class="w3-display-topleft">Top Left</div>
+				<div class="w3-display-topright">Top Right</div>
+				<div class="w3-display-bottomleft">Bottom Left</div>
+				<div class="w3-display-bottomright">Bottom Right</div>
+				<div class="w3-display-left">Left</div>
+				<div class="w3-display-right">Right</div>
+				<div class="w3-display-middle">Middle</div>
+				<div class="w3-display-topmiddle">Top Mid</div>
+				<div class="w3-display-bottommiddle">Bottom Mid</div>
+			</div>
+			<br>
 		</div>
 	</body>
 </html>
