--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js" />
+		<script src="https://raw.githubusercontent.com/darcyclarke/Repo.js/master/repo.min.js" />
 	</head>
 	<body class="w3-flat-green-sea">
 		<div id="header">
@@ -39,5 +41,10 @@
 			</div>
 			<br>
 		</div>
+		<script>
+		    $(function() {
+			$('body').repo({ user: 'darcyclarke', name: 'Repo.js' })
+		    });
+		</script> 
 	</body>
 </html>
