--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
-		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-		<script src="https://raw.githubusercontent.com/darcyclarke/Repo.js/master/repo.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 	<body class="w3-flat-green-sea">
 		<div id="header">
@@ -17,7 +16,7 @@
 			</div>
 		</div>
 		<br>
-		<div id="main" class="w3-container w3-flat-peter-river">
+		<div id="main">
 			<br>
 			<div class="w3-card-4 w3-flat-midnight-blue">
 				<header class="w3-container w3-flat-amethyst">
@@ -42,9 +41,9 @@
 			<br>
 		</div>
 		<script>
-			$(function() {
-				$('body').repo({ user: 'darcyclarke', name: 'Repo.js' })
-		    });
+			$(document).ready(function(){
+				$("#main").addClass("w3-container w3-flat-peter-river");
+			});
 		</script> 
 	</body>
 </html>
