--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
-	<body class="w3-flat-green-sea">
+	<body>
 		<div id="header">
 			<div class="w3-container w3-left-align">
 				<h1>Styling Test</h1>
 			</div>
-			<div class="w3-bar-block w3-black" style="height:12px;">
+			<div class="bar">
 				<div class="w3-bar-item"></div>
 			</div>
 		</div>
@@ -43,6 +43,9 @@
 		<script>
 			$(document).ready(function(){
 				$("#main").addClass("w3-container w3-flat-peter-river");
+				$("body").addClass("w3-flat-green-sea");
+				$(".bar").addClass("w3-bar-block w3-black");
+				$(".bar").css("height", "12px");
 			});
 		</script> 
 	</body>
