--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
+		
 		<link rel="icon" href="/styling-testing/favicons/icon/favicon-32x32.png" sizes="32x32">
+		<link rel="manifest" href="/styling-testing/favicons/icon/manifest.json">
+		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 	<body>
