--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
 		
 		<link rel="icon" href="/styling-testing/favicons/icon/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" href="/styling-testing/favicons/icon/favicon-64x64.png" sizes="64x64">
 		<link rel="manifest" href="/styling-testing/favicons/icon/manifest.json">
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
