--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head>
+	<head lang="en">
 		<title>Styling Testing</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#ffffff">
 		
@@ -52,6 +53,7 @@
 			$(document).ready(function(){
 				$("#main").addClass("w3-container w3-flat-peter-river");
 				$("body").addClass("w3-flat-green-sea");
+				$("body").css("overflow", "hidden")
 				$(".bar").addClass("w3-bar-block w3-black");
 				$(".bar").css("height", "12px");
 			});
