--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+    		<link href='/styling-testing/libraries/fontawesome/css/all.min.css' rel='stylesheet' type='text/css'>
 		
 		<link rel="icon" href="/styling-testing/favicons/icon/favicon-32x32.png" sizes="32x32">
 		<link rel="icon" href="/styling-testing/favicons/icon/favicon-64x64.png" sizes="64x64">
@@ -53,7 +55,10 @@
 			$(document).ready(function(){
 				$("#main").addClass("w3-container w3-flat-peter-river");
 				$("body").addClass("w3-flat-green-sea");
-				$("body").css("overflow", "hidden")
+				$("body").css({
+					"overflow": "hidden",
+					"font-family": "Open Sans, sans-serif"
+				});
 				$(".bar").addClass("w3-bar-block w3-black");
 				$(".bar").css("height", "12px");
 			});
