--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Styling Testing</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="theme-color" content="#ffffff">
+		<meta name="theme-color" content="#16a085">
 		
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
