--- a/index.html
+++ b/index.html
@@ -50,17 +50,6 @@
 			</div>
 			<br>
 		</div>
-		<script>
-			$(document).ready(function(){
-				$("#main").addClass("w3-container w3-flat-peter-river");
-				$("body").addClass("w3-flat-green-sea");
-				$("body").css({
-					"overflow": "hidden",
-					"font-family": "Open Sans, sans-serif"
-				});
-				$(".bar").addClass("w3-bar-block w3-black");
-				$(".bar").css("height", "12px");
-			});
-		</script> 
+		<script src="/styling-testing/js/script.js"></script> 
 	</body>
 </html>
