--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel="icon" href="/styling-testing/favicons/favicon-32x32.png" sizes="32x32">
 		<link rel="icon" href="/styling-testing/favicons/favicon-64x64.png" sizes="64x64">
 		
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="/styling-testing/libraries/jquery/js/jquery.min.js"></script>
 	</head>
 	<body>
 		<div id="header">
