--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#16a085">
 		
-		<link rel="/styling-testing/libraries/w3css/css/w3.min.css">
+		<link rel="/styling-testing/libraries/w3css/css/w3.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 		<link href="/styling-testing/libraries/fontawesome/css/all.min.css" rel="stylesheet" type="text/css">
