--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#16a085">
 		
-		<link rel="/styling-testing/libraries/w3css/css/w3.css">
-		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
-		<link href="/styling-testing/libraries/fontawesome/css/all.min.css" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3.css" type="text/css">
+		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css" type="text/css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" type="text/css">
+		<link rel="stylesheet" href="/styling-testing/libraries/fontawesome/css/all.min.css" type="text/css">
 		
 		<link rel="icon" href="/styling-testing/favicons/favicon-32x32.png" sizes="32x32">
 		<link rel="icon" href="/styling-testing/favicons/favicon-64x64.png" sizes="64x64">
