--- a/index.html
+++ b/index.html
@@ -2,19 +2,25 @@
 <html lang="en">
 	<head>
 		<title>Styling Testing</title>
+		
+		<!-- Metadata -->
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#16a085">
 		
+		<!-- Stylesheets -->
 		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3.css" type="text/css">
 		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css" type="text/css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" type="text/css">
 		<link rel="stylesheet" href="/styling-testing/libraries/fontawesome/css/all.min.css" type="text/css">
 		
+		<!-- Icons -->
 		<link rel="icon" href="/styling-testing/favicons/favicon-32x32.png" sizes="32x32">
 		<link rel="icon" href="/styling-testing/favicons/favicon-64x64.png" sizes="64x64">
 		
+		<!-- Scripts -->
 		<script src="/styling-testing/resources/jquery.min.js"></script>
+		<script src="/styling-testing/resources/w3.min.js"></script>
 	</head>
 	<body>
 		<div id="header">
