--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<meta name="theme-color" content="#16a085">
 		
 		<!-- Stylesheets -->
-		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3.css" type="text/css">
-		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css" type="text/css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" type="text/css">
-		<link rel="stylesheet" href="/styling-testing/libraries/fontawesome/css/all.min.css" type="text/css">
+		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3.css">
+		<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
+		<link rel="stylesheet" href="/styling-testing/libraries/fontawesome/css/all.min.css">
 		
 		<!-- Icons -->
 		<link rel="icon" href="/styling-testing/favicons/favicon-32x32.png" sizes="32x32">
