--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3.css">
 		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3-colors-flat.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
+		<link rel="stylesheet" href="/styling-testing/fonts/OpenSans.css">
 		<link rel="stylesheet" href="/styling-testing/libraries/fontawesome/css/all.min.css">
 		
 		<!-- Icons -->
