--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 			</div>
 			<br>
 		</div>
-		<script src="/styling-testing/js/script.js"></script> 
+		
+		<script type="text/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script> 
+		
+		<script type="text/javascript" src="/styling-testing/js/script.js"></script> 
 	</body>
 </html>
