--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
 				<div class="w3-display-bottommiddle">Bottom Mid</div>
 			</div>
 			<br>
+			<div class="w3-row">
+				<div class="w3-third w3-flat-amethyst">
+					<p>&#8531;</p>
+				</div>
+				<div class="w3-third w3-flat-amethyst">
+					<p>&#8531;</p>
+				</div>
+				<div class="w3-third w3-flat-amethyst">
+					<p>&#8531;</p>
+				</div>
+			</div>
+			<br>
 		</div>
 		
 		<script type="text/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script> 
