--- a/index.html
+++ b/index.html
@@ -58,8 +58,14 @@
 				<div class="w3-third w3-flat-amethyst">
 					<p>&#8531;</p>
 				</div>
+				<div class="w3-bar-block w3-black" style="width: 12px;">
+					<div class="w3-bar-item"></div>
+				</div>
 				<div class="w3-third w3-flat-amethyst">
 					<p>&#8531;</p>
+				</div>
+				<div class="w3-bar-block w3-black" style="width: 12px;">
+					<div class="w3-bar-item"></div>
 				</div>
 				<div class="w3-third w3-flat-amethyst">
 					<p>&#8531;</p>
