--- a/index.html
+++ b/index.html
@@ -55,20 +55,14 @@
 			</div>
 			<br>
 			<div class="w3-row">
-				<div class="w3-third w3-flat-amethyst">
-					<p>&#8531;</p>
+				<div class="w3-panel w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-border-black w3-third w3-flat-amethyst">
+					<h3 class="w3-center">&#8531;</h3>
 				</div>
-				<div class="w3-bar-block w3-black" style="width: 12px;">
-					<div class="w3-bar-item"></div>
+				<div class="w3-panel w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-border-black w3-third w3-flat-amethyst">
+					<h3 class="w3-center">&#8531;</h3>
 				</div>
-				<div class="w3-third w3-flat-amethyst">
-					<p>&#8531;</p>
-				</div>
-				<div class="w3-bar-block w3-black" style="width: 12px;">
-					<div class="w3-bar-item"></div>
-				</div>
-				<div class="w3-third w3-flat-amethyst">
-					<p>&#8531;</p>
+				<div class="w3-panel w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-border-black w3-third w3-flat-amethyst">
+					<h3 class="w3-center">&#8531;</h3>
 				</div>
 			</div>
 			<br>
