--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 			<br>
 		</div>
 		
-		<script type="text/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script> 
+		<script type="application/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script> 
 		
-		<script type="text/javascript" src="/styling-testing/js/script.js"></script> 
+		<script type="application/javascript" src="/styling-testing/js/script.js"></script> 
 	</body>
 </html>
