--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		<link rel="icon" href="/styling-testing/favicons/favicon-64x64.png" sizes="64x64">
 		
 		<!-- Scripts -->
-		<script src="/styling-testing/resources/jquery.min.js"></script>
-		<script src="/styling-testing/resources/VueJS/vue.js"></script>
+		<script type="application/javascript" src="/styling-testing/resources/jquery.min.js"></script>
+		<script type="application/javascript" src="/styling-testing/resources/VueJS/vue.js"></script>
 	</head>
 	<body>
 		<div id="header">
