--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<p>This is a card</p>
 				</header>
 				<div id="card-desc" class="w3-container">
-					<p v-html="rawHtml"></p>
+					<p v-html="cardDesc"></p>
 				</div>
 			</div>
 			<br>
