--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 				</div>
 			</div>
 			<br>
+			<code class="w3-code jsHigh">
+				console.log("Hello, World!")
+			</code>
 		</div>
 		
 		<script type="application/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script> 
