--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 		<br>
 		<div id="main">
 			<br>
-			<div class="w3-card-4 w3-flat-midnight-blue">
+			<div id="cardTest" class="w3-card-4 w3-flat-midnight-blue">
 				<header class="w3-container w3-flat-amethyst">
-					<p>This is a card</p>
+					<p v-html="cardTitle"></p>
 				</header>
 				<div id="card-desc" class="w3-container">
 					<p v-html="cardDesc"></p>
