--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 				</div>
 			</div>
 			<br>
-			<code class="w3-code jsHigh">
+			<div class="w3-code jsHigh">
 				console.log("Hello, World!")
-			</code>
+			</div>
 		</div>
 		
 		<script type="application/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script> 
