--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<body>
 		<div id="header">
 			<div class="w3-container w3-left-align">
-				<h1>Styling Test</h1>
+				<h1 v-html="mainTitle"></h1>
 			</div>
 			<div class="bar">
 				<div class="w3-bar-item"></div>
