--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 			<div class="w3-container w3-left-align">
 				<h1 v-html="mainTitle"></h1>
 			</div>
-			<div class="bar">
-				<div class="w3-bar-item"></div>
-			</div>
+			<div v-html="bar"></div>
 		</div>
 		<br>
 		<div id="main">
