--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 			<div class="w3-container w3-left-align">
 				<h1 v-html="mainTitle"></h1>
 			</div>
-			<div v-html="bar"></div>
+			<div v-html="bar">
+				<div class="barItem"></div>
+			</div>
 		</div>
 		<br>
 		<div id="main">
