--- a/index.html
+++ b/index.html
@@ -24,12 +24,8 @@
 	</head>
 	<body>
 		<div id="header">
-			<div class="w3-container w3-left-align">
-				<h1 v-html="mainTitle"></h1>
-			</div>
-			<div v-html="bar">
-				<div class="barItem"></div>
-			</div>
+			<div v-html="mainTitle" class="w3-container w3-left-align"></div>
+			<div v-html="bar"></div>
 		</div>
 		<br>
 		<div id="main">
