--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 		<script type="application/javascript" src="/styling-testing/resources/VueJS/vue.js"></script>
 	</head>
 	<body>
+		<span class="w3-card-4">
+			<img src="https://simpleicons.org/icons/jquery.svg" />
+		</span>
 		<div id="header">
 			<div v-html="mainTitle" class="w3-container w3-left-align"></div>
 			<div v-html="bar"></div>
