--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</head>
 	<body>
 		<span class="w3-card-4">
-			<img src="https://simpleicons.org/icons/jquery.svg" />
+			<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" />
 		</span>
 		<div id="header">
 			<div v-html="mainTitle" class="w3-container w3-left-align"></div>
