--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 		<script type="application/javascript" src="/styling-testing/resources/VueJS/vue.js"></script>
 	</head>
 	<body>
-		<span class="w3-card-4">
+		<span class="w3-card-4" style="width: 64px; height: 32px;">
 			<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" />
+			<img width="32" height="32" src="https://simpleicons.org/icons/vue-dot-js.svg" />
 		</span>
 		<div id="header">
 			<div v-html="mainTitle" class="w3-container w3-left-align"></div>
