--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
 		<script type="application/javascript" src="/styling-testing/resources/VueJS/vue.js"></script>
 	</head>
 	<body>
-		<span class="w3-card-4" style="width: 64px; height: 32px;">
-			<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" />
-			<img width="32" height="32" src="https://simpleicons.org/icons/vue-dot-js.svg" />
-		</span>
+		<div class="w3-card-4" style="display: inline; width: 64px; height: 32px;">
+			<a href="https://v3.vuejs.org/">
+				<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" alt="Vue.JS" />
+			</a>
+			<a href="https://jquery.com/">
+				<img width="32" height="32" src="https://simpleicons.org/icons/vue-dot-js.svg" alt="jQuery" />
+			</a>
+		</div>
 		<div id="header">
 			<div v-html="mainTitle" class="w3-container w3-left-align"></div>
 			<div v-html="bar"></div>
