--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 		<script type="application/javascript" src="/styling-testing/resources/VueJS/vue.js"></script>
 	</head>
 	<body>
-		<div class="w3-card-4" style="display: inline-flex; width: 72px; height: 40px;">
-			<a align="center" href="https://v3.vuejs.org/">
+		<div class="w3-card-4" style="display: inline-flex; width: 64px; height: 64px; padding: 4px;">
+			<a href="https://v3.vuejs.org/">
 				<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" alt="Vue.JS" />
 			</a>
-			<a align="center" href="https://jquery.com/">
+			<a href="https://jquery.com/">
 				<img width="32" height="32" src="https://simpleicons.org/icons/vue-dot-js.svg" alt="jQuery" />
 			</a>
 		</div>
