--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<script type="application/javascript" src="/styling-testing/resources/VueJS/vue.js"></script>
 	</head>
 	<body>
-		<div class="w3-card-4" style="display: inline-flex; width: 64px; height: 64px; padding: 4px; box-sizing: border-box;">
+		<div class="w3-card-4" style="display: inline-flex; width: calc(64px + 16px); height: calc(32px + 16px); align-items: center;">
 			<a href="https://v3.vuejs.org/">
 				<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" alt="Vue.JS" />
 			</a>
