--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
 		<script type="application/javascript" src="/styling-testing/resources/VueJS/vue.js"></script>
 	</head>
 	<body>
-		<div class="w3-card-4" style="display: inline-flex; width: calc(64px + 16px); height: calc(32px + 16px); justify-content: center; align-items: center;">
-			<a href="https://v3.vuejs.org/">
-				<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" alt="Vue.JS" />
-			</a>
-			<a href="https://jquery.com/">
-				<img width="32" height="32" src="https://simpleicons.org/icons/vue-dot-js.svg" alt="jQuery" />
-			</a>
-		</div>
 		<div id="header">
-			<div v-html="mainTitle" class="w3-container w3-left-align"></div>
+			<div style="display: inline-flex;">
+				<div v-html="mainTitle" class="w3-container w3-left-align"></div>
+				<div class="w3-card-4" style="display: inline-flex; width: calc(64px + 16px); height: calc(32px + 16px); justify-content: center; align-items: center;">
+					<a href="https://v3.vuejs.org/">
+						<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" alt="Vue.JS" />
+					</a>
+					<a href="https://jquery.com/">
+						<img width="32" height="32" src="https://simpleicons.org/icons/vue-dot-js.svg" alt="jQuery" />
+					</a>
+				</div>
+			</div>
 			<div v-html="bar"></div>
 		</div>
 		<br>
