--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</head>
 	<body>
 		<div id="header">
-			<div style="display: inline-flex;">
+			<div style="display: inline-flex; align-items: center;">
 				<div v-html="mainTitle" class="w3-container w3-left-align"></div>
 				<div class="w3-card-4" style="display: inline-flex; width: calc(64px + 16px); height: calc(32px + 16px); justify-content: center; align-items: center;">
 					<a href="https://v3.vuejs.org/">
