--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div id="header">
 			<div style="display: inline-flex; align-items: center;">
 				<div v-html="mainTitle" class="w3-container w3-left-align"></div>
-				<div class="w3-panel w3-card-4" style="display: inline-flex; width: calc(64px + 16px); height: calc(32px + 16px); justify-content: center; align-items: center;">
+				<div class="w3-container w3-card-4" style="display: inline-flex; width: 64px; height: 32px; justify-content: center; align-items: center;">
 					<a href="https://v3.vuejs.org/">
 						<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" alt="Vue.JS" />
 					</a>
