--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="auto">
 	<head>
 		<title>Styling Testing</title>
 		
@@ -58,14 +58,14 @@
 			</div>
 			<br>
 			<div class="w3-row">
-				<div class="w3-panel w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-border-black w3-third w3-flat-amethyst">
-					<h3 class="w3-center">&#8531;</h3>
+				<div class="symbol w3-panel w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-border-black w3-third w3-flat-amethyst">
+					<h3 v-html="third"></h3>
 				</div>
-				<div class="w3-panel w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-border-black w3-third w3-flat-amethyst">
-					<h3 class="w3-center">&#8531;</h3>
+				<div class="symbol w3-panel w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-border-black w3-third w3-flat-amethyst">
+					<h3 v-html="third"></h3>
 				</div>
-				<div class="w3-panel w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-border-black w3-third w3-flat-amethyst">
-					<h3 class="w3-center">&#8531;</h3>
+				<div class="symbol w3-panel w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-border-black w3-third w3-flat-amethyst">
+					<h3 v-html="third"></h3>
 				</div>
 			</div>
 			<br>
