--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 			</div>
 		</div>
 		
-		<script type="application/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script> 
-		
+		<script type="application/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script>
+		<script type="application/javascript" src="https://www.w3schools.com/lib/w3codecolor.js"></script>
 		<script type="application/javascript" src="/styling-testing/js/script.js"></script> 
 	</body>
 </html>
