--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 				</div>
 			</div>
 			<br>
-			<div class="w3-code jsHigh">
-				console.log("Hello, World!")
+			<div id="code1" class="w3-code jsHigh">
+				
 			</div>
 		</div>
 		
