--- a/index.html
+++ b/index.html
@@ -80,8 +80,6 @@
 		
 		<script type="application/javascript" src="/styling-testing/js/script.js"></script>
 		
-		<script>
-			w3CodeColor();
-		</script>
+		<script>w3CodeColor();</script>
 	</body>
 </html>
