--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 				</div>
 			</div>
 			<br>
-			<div id="code1" class="w3-code jsHigh">
+			<code id="code1" class="w3-code jsHigh">
 				
-			</div>
+			</code>
 		</div>
 		
 		<script type="application/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script>
