--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 				</div>
 			</div>
 			<br>
-			<code id="code1" class="w3-code jsHigh">
-				
-			</code>
+			<div class="w3-code jsHigh">
+				<pre id="code1"></pre>
+			</div>
 		</div>
 		
 		<script type="application/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script>
