--- a/index.html
+++ b/index.html
@@ -79,5 +79,14 @@
 		<script type="application/javascript" src="https://www.w3schools.com/lib/w3codecolor.js"></script>
 		
 		<script type="application/javascript" src="/styling-testing/js/script.js"></script>
+		
+		<script>
+			$(document).ready(function(){
+				$.get("https://raw.githubusercontent.com/Hoidberg/styling-testing/main/js/script.js", function(data, status){
+					$("#code1").text(data);
+				});
+				w3CodeColor();
+			});
+		</script>
 	</body>
 </html>
