--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<!-- Scripts -->
 		<script type="application/javascript" src="/styling-testing/resources/jquery.min.js"></script>
 		<script type="application/javascript" src="/styling-testing/resources/VueJS/vue.js"></script>
-		<script type="application/javascript" src="https://www.w3schools.com/lib/w3codecolor.js"></script>
+		<script type="application/javascript" src="/styling-testing/resources/w3codecolor.js"></script>
 	</head>
 	<body>
 		<div id="header">
