--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 		<link rel="icon" href="/styling-testing/favicons/favicon-64x64.png" sizes="64x64">
 		
 		<!-- Scripts -->
-		<script type="application/javascript" src="/styling-testing/resources/jquery.min.js"></script>
-		<script type="application/javascript" src="/styling-testing/resources/VueJS/vue.js"></script>
-		<script type="application/javascript" src="/styling-testing/resources/w3codecolor.js"></script>
+		<script type="text/javascript" src="/styling-testing/resources/jquery.min.js"></script>
+		<script type="text/javascript" src="/styling-testing/resources/VueJS/vue.js"></script>
 	</head>
 	<body>
 		<div id="header">
@@ -75,9 +74,11 @@
 			</pre>
 		</div>
 		
-		<script type="application/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script>
+		<script type="text/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script>
 		
-		<script type="application/javascript" src="/styling-testing/js/script.js"></script>
+		<script type="text/javascript" src="/styling-testing/js/script.js"></script>
+		
+		<script type="text/javascript" src="/styling-testing/resources/w3codecolor.js"></script>
 		
 		<script>
 			$(document).ready(function(){
