--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div id="header">
 			<div style="display: inline-flex; align-items: center;">
 				<div v-html="mainTitle" class="w3-container w3-left-align"></div>
-				<div class="w3-container w3-card-4" style="width: 80px; height: 48px; justify-content: center; align-items: center; align-self: flex-end;">
+				<div class="w3-container w3-card-4" style="display: flex; width: 80px; height: 48px; justify-content: center; align-items: center;">
 					<table>
 						<tr>
 							<td>
