--- a/index.html
+++ b/index.html
@@ -24,24 +24,32 @@
 	</head>
 	<body>
 		<div id="header">
-			<div style="display: inline-flex; align-items: center;">
-				<div v-html="mainTitle" class="w3-container w3-left-align"></div>
-				<div class="w3-container w3-card-4" style="display: flex; width: 80px; height: 48px; justify-content: center; align-items: center;">
-					<table>
-						<tr>
-							<td>
-								<a title="jQuery" href="https://jquery.com/">
-									<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" alt="jQuery" />
-								</a>
-							</td>
-							<td>
-								<a title="Vue.JS" href="https://v3.vuejs.org/">
-									<img width="32" height="32" src="https://simpleicons.org/icons/vue-dot-js.svg" alt="Vue.JS" />
-								</a>
-							</td>
-						</tr>
-					</table>
-				</div>
+			<div style="display: flex; align-items: center;">
+				<table>
+					<tr>
+						<td>
+							<div v-html="mainTitle" class="w3-container w3-left-align"></div>
+						</td>
+						<td>
+							<div class="w3-container w3-card-4" style="display: flex; width: 80px; height: 48px; justify-content: center; align-items: center;">
+								<table>
+									<tr>
+										<td>
+											<a title="jQuery" href="https://jquery.com/">
+												<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" alt="jQuery" />
+											</a>
+										</td>
+										<td>
+											<a title="Vue.JS" href="https://v3.vuejs.org/">
+												<img width="32" height="32" src="https://simpleicons.org/icons/vue-dot-js.svg" alt="Vue.JS" />
+											</a>
+										</td>
+									</tr>
+								</table>
+							</div>
+						</td>
+					</tr>
+				</table>
 			</div>
 			<div v-html="bar"></div>
 		</div>
