--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 	</head>
 	<body>
 		<div id="header">
-			<div style="display: flex; align-items: center;">
+			<div class="w3-display-container" style="display: flex; align-items: center;">
 				<table>
 					<tr>
 						<td>
 							<div v-html="mainTitle" class="w3-container w3-left-align"></div>
 						</td>
 						<td>
-							<div class="w3-container w3-card-4" style="display: flex; width: 80px; height: 48px; justify-content: center; align-items: center;">
+							<div class="w3-container w3-card-4 w3-display-right" style="display: flex; width: 80px; height: 48px; justify-content: center; align-items: center;">
 								<table>
 									<tr>
 										<td>
