--- a/index.html
+++ b/index.html
@@ -31,18 +31,25 @@
 							<div v-html="mainTitle" class="w3-container w3-left-align"></div>
 						</td>
 						<td>
-							<div class="w3-container w3-card-4 w3-display-right" style="display: flex; width: 80px; height: 48px; justify-content: center; align-items: center;">
+							<div class="w3-container w3-card-4 w3-display-right" style="display: flex; width: 80px; height: 48px; justify-content: center; align-items: center; left: 92.5%;">
 								<table>
 									<tr>
+										<td><h3>This Website Uses:</h3></td>
 										<td>
-											<a title="jQuery" href="https://jquery.com/">
-												<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" alt="jQuery" />
-											</a>
-										</td>
-										<td>
-											<a title="Vue.JS" href="https://v3.vuejs.org/">
-												<img width="32" height="32" src="https://simpleicons.org/icons/vue-dot-js.svg" alt="Vue.JS" />
-											</a>
+											<table>
+												<tr>
+													<td>
+														<a title="jQuery" href="https://jquery.com/">
+															<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" alt="jQuery" />
+														</a>
+													</td>
+													<td>
+														<a title="Vue.JS" href="https://v3.vuejs.org/">
+															<img width="32" height="32" src="https://simpleicons.org/icons/vue-dot-js.svg" alt="Vue.JS" />
+														</a>
+													</td>
+												</tr>
+											</table>
 										</td>
 									</tr>
 								</table>
