--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
 									<img width="32" height="32" src="https://simpleicons.org/icons/vue-dot-js.svg" alt="Vue.JS" />
 								</a>
 							</div>
+							<p>
+							    <a href="https://jigsaw.w3.org/css-validator/check/referer">
+								<img style="border:0;width:88px;height:31px"
+								    src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+								    alt="Valid CSS!" />
+							    </a>
+							</p>
 						</td>
 					</tr>
 				</table>
