--- a/index.html
+++ b/index.html
@@ -31,21 +31,30 @@
 							<div v-html="mainTitle" class="w3-container w3-left-align"></div>
 						</td>
 						<td>
-							<div class="w3-container w3-card-4 w3-display-right" style="display: flex; width: 80px; height: 48px; justify-content: center; align-items: center; left: 92.5%;">
-								<a title="jQuery" href="https://jquery.com/">
-									<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" alt="jQuery" />
-								</a>
-								<a title="Vue.JS" href="https://v3.vuejs.org/">
-									<img width="32" height="32" src="https://simpleicons.org/icons/vue-dot-js.svg" alt="Vue.JS" />
-								</a>
-							</div>
-							<p>
-							    <a href="https://jigsaw.w3.org/css-validator/check/referer">
-								<img style="border:0;width:88px;height:31px"
-								    src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
-								    alt="Valid CSS!" />
-							    </a>
-							</p>
+							<table>
+								<tr>
+									<td>
+									
+										<p>		
+											<a href="https://jigsaw.w3.org/css-validator/check/referer">
+												<img style="border:0;width:88px;height:31px"
+												 src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+												alt="Valid CSS!" />
+											</a>
+										</p>
+									</td>
+									<td>
+										<div class="w3-container w3-card-4 w3-display-right" style="display: flex; width: 80px; height: 48px; justify-content: center; align-items: center; left: 92.5%;">
+											<a title="jQuery" href="https://jquery.com/">
+												<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" alt="jQuery" />
+											</a>
+											<a title="Vue.JS" href="https://v3.vuejs.org/">
+												<img width="32" height="32" src="https://simpleicons.org/icons/vue-dot-js.svg" alt="Vue.JS" />
+											</a>
+										</div>
+									</td>
+								</tr>
+							</table>
 						</td>
 					</tr>
 				</table>
