--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<div v-html="mainTitle" class="w3-container w3-left-align"></div>
 						</td>
 						<td>
-							<table>
+							<table style="left: 92.5%;">
 								<tr>
 									<td>
 									
@@ -44,7 +44,7 @@
 										</p>
 									</td>
 									<td>
-										<div class="w3-container w3-card-4 w3-display-right" style="display: flex; width: 80px; height: 48px; justify-content: center; align-items: center; left: 92.5%;">
+										<div class="w3-container w3-card-4 w3-display-right" style="display: flex; width: 80px; height: 48px; justify-content: center; align-items: center;">
 											<a title="jQuery" href="https://jquery.com/">
 												<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" alt="jQuery" />
 											</a>
