--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
 							<div v-html="mainTitle" class="w3-container w3-left-align"></div>
 						</td>
 						<td>
-							<table style="left: 92.5%;">
+							<table style="left: 92.5%;" class="w3-display-right">
 								<tr>
 									<td>
-									
-										<p>		
+										<p>
 											<a href="https://jigsaw.w3.org/css-validator/check/referer">
 												<img style="border:0;width:88px;height:31px"
 												 src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
@@ -44,7 +43,7 @@
 										</p>
 									</td>
 									<td>
-										<div class="w3-container w3-card-4 w3-display-right" style="display: flex; width: 80px; height: 48px; justify-content: center; align-items: center;">
+										<div class="w3-container w3-card-4" style="display: flex; width: 80px; height: 48px; justify-content: center; align-items: center;">
 											<a title="jQuery" href="https://jquery.com/">
 												<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" alt="jQuery" />
 											</a>
