--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<div v-html="mainTitle" class="w3-container w3-left-align"></div>
 						</td>
 						<td>
-							<table class="w3-right-align" style="left: 85%; border-spacing: 10px;">
+							<table class="w3-display-right" style="left: 85%; border-spacing: 10px;">
 								<tr>
 									<td>
 										<div class="w3-container w3-card-4" style="display: flex; width: 80px; height: 48px; justify-content: center; align-items: center;">
