--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<title>Styling Testing</title>
 		
 		<!-- Metadata -->
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#16a085">
 		
@@ -96,11 +97,8 @@
 				<div id="code1" class="w3-code w3-text-black"></div>
 			</pre>
 		</div>
-		
 		<script type="text/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script>
-		
 		<script type="text/javascript" src="/styling-testing/js/script.js"></script>
-		
 		<script>
 			$(document).ready(function(){
 				$.get("https://raw.githubusercontent.com/Hoidberg/styling-testing/main/js/script.js", function(data, status){
