--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" dir="auto">
+<html lang="en-US" dir="auto">
 	<head>
 		<title>Styling Testing</title>
 		
 		<!-- Metadata -->
-		<meta http-equiv="Content-Type" content="text/html; charset=ANSI">
+		<meta http-equiv="Content-Type" content="text/html; charset=ANSI"> <!-- ANSI contains way more characters than UTF-8 -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#16a085">
