--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#16a085">
 		
+		<!-- URLs -->
+		<link rel="canonical" href="https://hoidberg.github.io/styling-testing/">
+		
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3.css">
 		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3-colors-flat.css">
