--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
 		
 		<!-- URLs -->
 		<link rel="canonical" href="https://hoidberg.github.io/styling-testing/">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/ko" hreflang="ko">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/de" hreflang="de">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/en-gb" hreflang="en-gb">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/es" hreflang="es">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/fr-fr" hreflang="fr-fr">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/fr-ca" hreflang="fr-ca">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/id" hreflang="id">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/it" hreflang="it">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/nl" hreflang="nl">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/pl" hreflang="pl">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/pt-br" hreflang="pt-br">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/ru" hreflang="ru">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/tr" hreflang="tr">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/vi" hreflang="vi">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/ko" hreflang="ko">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/zh-cn" hreflang="zh-cn">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/zh-tw" hreflang="zh-tw">
+		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/ja" hreflang="ja">
 		
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3.css">
