--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/zh-tw" hreflang="zh-tw">
 		<link rel="alternate" href="https://hoidberg.github.io/styling-testing/ja" hreflang="ja">
 		
+		<!-- Preload Assets -->
+		<link as="fetch" crossorigin="anonymous" href="https://simpleicons.org/icons/jquery.svg" rel="preload">
+		<link as="fetch" crossorigin="anonymous" href="https://simpleicons.org/icons/vue-dot-js.svg" rel="preload">
+		
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3.css">
 		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3-colors-flat.css">
