--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		<!-- Preconnect -->
 		<link rel="preconnect" href="https://simpleicons.org/">
 		
+		<!-- Preload -->
+		<link as="font" crossorigin="anonymous" href="https://fonts.gstatic.com/s/opensans/v18/mem8YaGs126MiZpBA-UFVZ0b.woff2" rel="preload" type="font/woff2">
+		
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3.css">
 		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3-colors-flat.css">
