--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 		<link rel="icon" href="/styling-testing/favicons/favicon-32x32.png" sizes="32x32">
 		<link rel="icon" href="/styling-testing/favicons/favicon-64x64.png" sizes="64x64">
 		
-		<!-- Scripts -->
+		<!-- Libraries -->
 		<script type="text/javascript" src="/styling-testing/resources/jQuery/jquery.min.js"></script>
 		<script type="text/javascript" src="/styling-testing/resources/VueJS/vue.js"></script>
+		<script type="text/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script>
+		
+		<!-- Scripts -->
 		<link as="script" href="/styling-testing/js/script.js" importance="high" rel="preload">
 		<script type="text/javascript" src="/styling-testing/js/script.js"></script>
 	</head>
@@ -105,7 +108,6 @@
 				<div id="code1" class="w3-code w3-text-black"></div>
 			</pre>
 		</div>
-		<script type="text/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script>
 		<script>
 			$(document).ready(function(){
 				$.get("https://raw.githubusercontent.com/Hoidberg/styling-testing/main/js/script.js", function(data, status){
