--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
 		<link as="font" crossorigin="anonymous" href="https://fonts.gstatic.com/s/opensans/v18/mem8YaGs126MiZpBA-UFVZ0b.woff2" rel="preload" type="font/woff2">
 		
 		<!-- Stylesheets -->
+		<link as="style" href="/styling-testing/libraries/w3css/css/w3.css" importance="high" rel="preload">
 		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3.css">
+		<link as="style" href="/styling-testing/libraries/w3css/css/w3-colors-flat.css" importance="high" rel="preload">
 		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3-colors-flat.css">
+		<link as="style" href="/styling-testing/fonts/OpenSans.css" importance="high" rel="preload">
 		<link rel="stylesheet" href="/styling-testing/fonts/OpenSans.css">
+		<link as="style" href="/styling-testing/libraries/fontawesome/css/all.min.css" importance="high" rel="preload">
 		<link rel="stylesheet" href="/styling-testing/libraries/fontawesome/css/all.min.css">
 		
 		<!-- Icons -->
