--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		
 		<!-- Preload -->
 		<link as="font" crossorigin="anonymous" href="https://fonts.gstatic.com/s/opensans/v18/mem8YaGs126MiZpBA-UFVZ0b.woff2" rel="preload" type="font/woff2">
+		<script async="" src="https://www.google-analytics.com/analytics.js"></script>
 		
 		<!-- Stylesheets -->
 		<link as="style" href="/styling-testing/libraries/w3css/css/w3.css" importance="high" rel="preload">
