--- a/index.html
+++ b/index.html
@@ -14,17 +14,12 @@
 		
 		<!-- Preload -->
 		<link as="font" crossorigin="anonymous" href="https://fonts.gstatic.com/s/opensans/v18/mem8YaGs126MiZpBA-UFVZ0b.woff2" rel="preload" type="font/woff2">
-		<script async="" src="https://www.google-analytics.com/analytics.js"></script>
 		
 		<!-- Stylesheets -->
 		<link as="style" href="/styling-testing/libraries/w3css/css/w3.css" importance="high" rel="preload">
-		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3.css">
 		<link as="style" href="/styling-testing/libraries/w3css/css/w3-colors-flat.css" importance="high" rel="preload">
-		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3-colors-flat.css">
 		<link as="style" href="/styling-testing/fonts/OpenSans.css" importance="high" rel="preload">
-		<link rel="stylesheet" href="/styling-testing/fonts/OpenSans.css">
 		<link as="style" href="/styling-testing/libraries/fontawesome/css/all.min.css" importance="high" rel="preload">
-		<link rel="stylesheet" href="/styling-testing/libraries/fontawesome/css/all.min.css">
 		
 		<!-- Icons -->
 		<link rel="icon" href="/styling-testing/favicons/favicon-32x32.png" sizes="32x32">
@@ -34,6 +29,9 @@
 		<script type="text/javascript" src="/styling-testing/resources/jQuery/jquery.min.js"></script>
 		<script type="text/javascript" src="/styling-testing/resources/VueJS/vue.js"></script>
 		<script type="text/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script>
+		
+		<!-- Scripts -->
+		<script async="" src="https://www.google-analytics.com/analytics.js"></script>
 	</head>
 	<body>
 		<div id="header">
