--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
 		
 		<!-- Stylesheets -->
 		<link as="style" href="/styling-testing/libraries/w3css/css/w3.css" importance="high" rel="preload">
+		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3.css">
 		<link as="style" href="/styling-testing/libraries/w3css/css/w3-colors-flat.css" importance="high" rel="preload">
+		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3-colors-flat.css">
 		<link as="style" href="/styling-testing/fonts/OpenSans.css" importance="high" rel="preload">
+		<link rel="stylesheet" href="/styling-testing/fonts/OpenSans.css">
 		<link as="style" href="/styling-testing/libraries/fontawesome/css/all.min.css" importance="high" rel="preload">
+		<link rel="stylesheet" href="/styling-testing/libraries/fontawesome/css/all.min.css">
 		
 		<!-- Icons -->
 		<link rel="icon" href="/styling-testing/favicons/favicon-32x32.png" sizes="32x32">
@@ -31,7 +35,8 @@
 		<script type="text/javascript" src="/styling-testing/resources/modernizr/modernizr.min.js"></script>
 		
 		<!-- Scripts -->
-		<script async="" src="https://www.google-analytics.com/analytics.js"></script>
+		<link as="script" href="https://www.google-analytics.com/analytics.js" importance="high" rel="preload">
+		<script async="" src="https://www.google-analytics.com/analytics.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<div id="header">
