--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		
 		<!-- Scripts -->
 		<link as="script" href="https://www.google-analytics.com/analytics.js" importance="high" rel="preload">
-		<script async="" src="https://www.google-analytics.com/analytics.js" crossorigin="anonymous"></script>
+		<script async="" src="https://www.google-analytics.com/analytics.js"></script>
 	</head>
 	<body>
 		<div id="header">
