--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<!-- Icons -->
 		<link rel="icon" href="/styling-testing/favicons/favicon-32x32.png" sizes="32x32">
 		<link rel="icon" href="/styling-testing/favicons/favicon-64x64.png" sizes="64x64">
+		<link rel="shortcut icon" href="/styling-testing/favicons/favicon-32x32.png">
 		
 		<!-- Libraries -->
 		<script type="text/javascript" src="/styling-testing/resources/jQuery/jquery.min.js"></script>
