--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 		<link rel="stylesheet" href="/styling-testing/libraries/fontawesome/css/all.min.css">
 		
 		<!-- Icons -->
-		<link rel="icon" href="/styling-testing/favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="icon" href="/styling-testing/favicons/favicon-64x64.png" sizes="64x64">
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/styling-testing/favicons/favicon-144x144.png">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/styling-testing/favicons/favicon-114x114.png">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/styling-testing/favicons/favicon-72x72.png">
+		<link rel="apple-touch-icon-precomposed" href="/styling-testing/favicons/favicon-57x57.png">
 		<link rel="shortcut icon" href="/styling-testing/favicons/favicon-32x32.png">
 		
 		<!-- Libraries -->
