--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		
 		<!-- Icons -->
 		<link rel="alternate icon" type="image/png" href="/styling-testing/favicons/favicon.png">
-		<link rel="icon" type="image/svg+xml" href="/styling-testing/favicons/favicon.svg">
+		<link crossorigin="anonymous" media="all" integrity="sha384-anbWDSVZv7SbpD4buWANQpNiadmJAG0mWmFCLtkAxp1jxQa3nARX2ISGzdu7HNid" rel="icon" type="image/svg+xml" href="/styling-testing/favicons/favicon.svg">
 		
 		<!-- Libraries -->
 		<script type="text/javascript" src="/styling-testing/resources/jQuery/jquery.min.js"></script>
