--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		<link rel="stylesheet" href="/styling-testing/libraries/fontawesome/css/all.min.css">
 		
 		<!-- Icons -->
-		<link rel="alternate icon" type="image/png" href="/styling-testing/favicons/favicon.png">
-		<link crossorigin="anonymous" media="all" integrity="sha384-anbWDSVZv7SbpD4buWANQpNiadmJAG0mWmFCLtkAxp1jxQa3nARX2ISGzdu7HNid" rel="icon" type="image/svg+xml" href="/styling-testing/favicons/favicon.svg">
+		<link crossorigin="anonymous" media="all" integrity="sha512-pzLLd+y0cUrg6/n1a67KmWv/uHfZjRb2CETGxgLYah0aKp/yXtpL7+TC1ksnN3C1mtMGRo+UGGHxYrNhMDGOmg==" rel="alternate icon" type="image/png" href="/styling-testing/favicons/favicon.png">
+		<link crossorigin="anonymous" media="all" integrity="sha512-0adxw3BoYSnJwgghezg1pKgXavzItBmAVOv7W31T3MQfzTXKl1578+7Y3ROuBNtIJob6JzFC9RZRxtSCOfP45g==" rel="icon" type="image/svg+xml" href="/styling-testing/favicons/favicon.svg">
 		
 		<!-- Libraries -->
 		<script type="text/javascript" src="/styling-testing/resources/jQuery/jquery.min.js"></script>
