--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 		<link as="style" href="/styling-testing/libraries/fontawesome/css/all.min.css" importance="high" rel="preload">
 		<link rel="stylesheet" href="/styling-testing/libraries/fontawesome/css/all.min.css">
 		<style>
-			[style~="display: flex;"] {
-				content: "Flexboxes are not supported";
+			body {
+				display: none;
 			}
 		</style>
 		
