--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<link rel="stylesheet" href="/styling-testing/libraries/fontawesome/css/all.min.css">
 		<style>
 			body {
-				display: none;
+				content: "Flexboxes aren't supported!";
 			}
 		</style>
 		
