--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 		<link rel="stylesheet" href="/styling-testing/fonts/OpenSans.css">
 		<link as="style" href="/styling-testing/libraries/fontawesome/css/all.min.css" importance="high" rel="preload">
 		<link rel="stylesheet" href="/styling-testing/libraries/fontawesome/css/all.min.css">
+		<link as="style" href="/styling-testing/resources/jQuery/UI/jquery-ui.min.css" importance="high" rel="preload">
+		<link rel="stylesheet" href="/styling-testing/resources/jQuery/UI/jquery-ui.min.css">
 		
 		<!-- Icons -->
 		<link crossorigin="anonymous" media="all" integrity="sha512-pzLLd+y0cUrg6/n1a67KmWv/uHfZjRb2CETGxgLYah0aKp/yXtpL7+TC1ksnN3C1mtMGRo+UGGHxYrNhMDGOmg==" rel="alternate icon" type="image/png" href="/styling-testing/favicons/favicon.png">
@@ -37,6 +39,7 @@
 		
 		<!-- Libraries -->
 		<script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="jquery" src="/styling-testing/resources/jQuery/jquery.min.js"></script>
+		<script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="jqueryui" src="/styling-testing/resources/jQuery/UI/jquery-ui.min.js"></script>
 		<script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="vuejs" src="/styling-testing/resources/VueJS/vue.js"></script>
 		<script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="modernizr" src="/styling-testing/resources/modernizr/modernizr.min.js"></script>
 		
