--- a/index.html
+++ b/index.html
@@ -22,16 +22,12 @@
 		<link as="font" crossorigin="anonymous" href="https://fonts.gstatic.com/s/opensans/v18/mem8YaGs126MiZpBA-UFVZ0b.woff2" rel="preload" type="font/woff2">
 		
 		<!-- Stylesheets -->
-		<link as="style" href="/styling-testing/libraries/w3css/css/w3.css" importance="high" rel="preload">
 		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3.css">
-		<link as="style" href="/styling-testing/libraries/w3css/css/w3-colors-flat.css" importance="high" rel="preload">
 		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3-colors-flat.css">
-		<link as="style" href="/styling-testing/fonts/OpenSans.css" importance="high" rel="preload">
 		<link rel="stylesheet" href="/styling-testing/fonts/OpenSans.css">
-		<link as="style" href="/styling-testing/libraries/fontawesome/css/all.min.css" importance="high" rel="preload">
 		<link rel="stylesheet" href="/styling-testing/libraries/fontawesome/css/all.min.css">
-		<link as="style" href="/styling-testing/resources/jQuery/UI/jquery-ui.min.css" importance="high" rel="preload">
 		<link rel="stylesheet" href="/styling-testing/resources/jQuery/UI/jquery-ui.min.css">
+		<link rel="stylesheet" href="/styling-testing/css/style.css">
 		
 		<!-- Icons -->
 		<link crossorigin="anonymous" media="all" integrity="sha512-pzLLd+y0cUrg6/n1a67KmWv/uHfZjRb2CETGxgLYah0aKp/yXtpL7+TC1ksnN3C1mtMGRo+UGGHxYrNhMDGOmg==" rel="alternate icon" type="image/png" href="/styling-testing/favicons/favicon.png">
