--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<table class="w3-display-right" style="left: calc(100% - 204.6px); border-spacing: 10px;">
 								<tr>
 									<td>
-										<div class="w3-container w3-card-4" style="display: flex; width: 80px; height: 48px; justify-content: center; align-items: center;">
+										<div class="w3-container w3-card-4 flex-space">
 											<a title="jQuery" href="https://jquery.com/">
 												<img width="32" height="32" src="https://simpleicons.org/icons/jquery.svg" alt="jQuery" />
 											</a>
