--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			</div>
 			<br>
 			<pre>
-				<div id="code1" class="w3-code w3-text-black"></div>
+				<div id="code1" class="w3-code w3-text-black">Loading...</div>
 			</pre>
 		</div>
 		
