--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 		<meta name="theme-color" content="#16a085">
 		
 		<!-- Prefetch -->
+		<link rel="dns-prefetch" href="https://jigsaw.w3.org/">
 		<link rel="dns-prefetch" href="https://simpleicons.org/">
 		<link rel="dns-prefetch" href="https://fonts.gstatic.com/">
+		<link rel="dns-prefetch" href="https://www.google-analytics.com/">
 		
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3.css">
