--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			</div>
 			<br>
 			<pre>
-				<div id="code1" class="w3-code w3-text-black">Loading...</div>
+				<div id="code1" class="w3-code w3-text-black" style="word-wrap: break-word;">Loading...</div>
 			</pre>
 		</div>
 		
