--- a/index.html
+++ b/index.html
@@ -112,9 +112,7 @@
 				</div>
 			</div>
 			<br>
-			<pre>
-				<div id="code1" class="w3-code w3-text-black" style="word-break: break-word;">Loading...</div>
-			</pre>
+			<div id="code1" class="w3-code w3-text-black" style="word-break: break-word; word-wrap: break-word; white-space: pre-wrap;">Loading...</div>
 		</div>
 		
 		<!-- Scripts -->
