--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
 				</div>
 			</div>
 			<br>
-			<div id="code1" class="w3-code w3-text-black" style="word-break: break-word; word-wrap: break-word; white-space: pre-wrap;">If you see this message for longer than 2 seconds please reload</div>
+			<div id="code1" class="w3-code jsHigh" style="word-break: break-word; word-wrap: break-word; white-space: pre-wrap;">If you see this message for longer than 2 seconds please reload</div>
 		</div>
 		
 		<!-- Scripts -->
 		<script type="text/javascript" data-main="/styling-testing/js/main.js" src="/styling-testing/resources/RequireJS/require.js"></script>
+		<script type="text/javascript" src="https://www.w3schools.com/lib/w3codecolor.js"></script>
 		<script type="text/javascript" src="/styling-testing/js/script.js"></script>
 		<script type="text/javascript" src="/styling-testing/js/mobile.js"></script>
-		<script>jQuery.noConflict(),function(t){t(function(){t.get("https://raw.githubusercontent.com/Hoidberg/styling-testing/main/js/script.js",function(n,i){t("#code1").text(n)})})}(jQuery);</script>
 		<script async="">!function(e,a,t,n,c,o,s){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments)},e[c].l=1*new Date,o=a.createElement(t),s=a.getElementsByTagName(t)[0],o.async=1,o.src=n,s.parentNode.insertBefore(o,s)}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-3764464-7","auto"),ga("send","pageview");</script>
 	</body>
 </html>
