--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				</div>
 			</div>
 			<br>
-			<div class="w3-code jsHigh notranslate" style="word-break: break-word; word-wrap: break-word; white-space: pre-wrap;">
+			<div class="w3-code jsHigh notranslate" style="word-wrap: break-word; white-space: pre;">
 				window.onload = function() {
 					var interval = setInterval(function() {
 						if (Modernizr.mq('only all and (max-width: 480px)')) {
